@@ -1,0 +1,26 @@
+<div class="prototype">
+  Macro
+  $Tt_bunny_pixelarray@ *$Sbunny_clipable_copy@($Tt_bunny_clipable@ *$Sdest@, $Kconst@ $Tt_bunny_clipable@ *$Sori@);
+</div>
+<hr />
+
+<div class="resume">
+  <h3>Description</h3>
+  $A Copy all clipable fields (except buffer) from $Sori@ to $Sdest@.
+</div>
+<hr />
+
+<div class="parameters">
+  <h3>Parameters</h3>
+  <ul>
+    <li>
+      $Tt_bunny_clipable@ *$Sdest@:<br />
+      $A The destination clipable.
+    </li>
+    <li>
+      $Kconst@ $Tt_bunny_clipable@ *$Sori@:<br />
+      $A The original clipable.
+    </li>
+  </ul>
+</div>
+
